# smartscan-lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
smartscan/: __init__.py  classify.py  cluster.py  constants.py  embeddings.py  errors.py  indexer.py  types.py
smartscan/classification/: __init__.py  classifier.py  few_shot.py  types.py
smartscan/classify/: __init__.py  few_shot.py  helpers.py  incremental_clusterer.py  metrics.py  types.py
smartscan/cluster/: __init__.py  analysis.py  cluster_analysis.py  helpers.py  incremental_clusterer.py  types.py
smartscan/embeds/: __init__.py  embedding_store.py  helpers.py  types.py
smartscan/index/: listener.py
smartscan/media/: __init__.py  doc.py  image.py  types.py  video.py
smartscan/models/: constants.py  model_manager.py  registry.py  types.py
smartscan/processor/: processor.py  processor_listener.py  types.py
smartscan/providers/: __init__.py
smartscan/providers/detectors/: detector_provider.py
smartscan/providers/detectors/ultra_light/: face.py
smartscan/providers/embeddings/: embedding_provider.py  tokenizers.py
smartscan/providers/embeddings/clip/: image.py  text.py
smartscan/providers/embeddings/dino/: image.py
smartscan/providers/embeddings/distill_roberta/: text.py
smartscan/providers/embeddings/inception_resnet/: face.py
smartscan/providers/embeddings/minilm/: text.py
smartscan/utils/: __init__.py  asyncio.py  file.py  file_utils.py  image_utils.py  models.py  text_utils.py  video_utils.py
tests/: clusters_test.py  model_manager_test.py
