[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartscan"
version = "0.1.0"
description = "SmartScan provides on-device ML pipelines with support for embeddings, ONNX models, indexing, classification, and efficient batch processing."
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.4,<3.0.0",
    "onnxruntime>=1.21.0,<2.0.0",
    "pillow>=11.1.0,<12.0.0",
    "tokenizers>=0.22.1,<1.0.0",
    "requests>=2.31.0,<3.0.0",
]


[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"smartscan.providers.embeddings.clip" = ["vocab.json", "merges.txt"]
"smartscan.providers.embeddings.minilm" = ["vocab.txt"]

