[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartscan"
version = "1.0.2"
description = "SmartScan provides tools for ML inference, indexing, semantic search, clustering, classification and efficient batch processing."
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.2.4,<3.0.0",
    "onnxruntime>=1.21.0,<2.0.0",
    "pillow>=11.1.0,<12.0.0",
    "tokenizers>=0.22.1,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "psutil>=7.0.0, <8.0.0",
    "pytest==9.0.2",
    "hnswlib==0.8.0",
    "pydantic>=2.12.5, <3.0.0"
]

[tool.setuptools.packages]
find = {}